--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "konva": "^7.0.4",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
+    "react-chatbot-kit": "^1.0.5",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1",
     "react-konva": "^16.13.0-5",
-    "react-quill": "^1.3.5"
+    "react-quill": "^1.3.5",
+    "react-scripts": "3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
