--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1",
     "react-konva": "^16.13.0-5",
-    "react-quill": "^1.3.5"
+    "react-modal": "^3.11.2",
+    "react-quill": "^1.3.5",
+    "react-scripts": "3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
