--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "classnames": "^2.2.6",
+    "cloudinary-react": "^1.6.6",
     "konva": "^7.0.4",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1",
     "react-konva": "^16.13.0-5",
-    "react-quill": "^1.3.5"
+    "react-quill": "^1.3.5",
+    "react-scripts": "3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
