--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-konva": "^16.13.0-5",
     "react-quill": "^1.3.5",
     "react-scripts": "3.4.1",
+    "tesseract.js": "^2.1.1",
     "use-image": "^1.0.6"
   },
   "scripts": {
