--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "axios": "^0.19.2",
     "classnames": "^2.2.6",
     "cloudinary-react": "^1.6.6",
-    "draft-js": "^0.11.6",
+    "html2canvas": "^1.0.0-rc.5",
     "konva": "^7.0.4",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
