--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "axios": "^0.19.2",
     "classnames": "^2.2.6",
     "cloudinary-react": "^1.6.6",
-    "html2canvas": "^1.0.0-rc.5",
+    "html2canvas": "^1.0.0-rc.6",
+    "jspdf": "^1.5.3",
     "konva": "^7.0.4",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
@@ -21,6 +22,7 @@
     "react-color": "^2.18.1",
     "react-dom": "^16.13.1",
     "react-konva": "^16.13.0-5",
+    "react-pdf": "^4.2.0",
     "react-quill": "^1.3.5",
     "react-scripts": "3.4.1",
     "tesseract.js": "^2.1.1",
