--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
     "@storybook/addon-links": "^5.3.19",
     "@storybook/addons": "^5.3.19",
     "@storybook/preset-create-react-app": "^3.1.4",
-    "@storybook/react": "^5.3.19"
+    "@storybook/react": "^5.3.19",
+    "express": "^4.17.1",
+    "pg": "^8.3.0"
   }
 }
