--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.19.2",
     "classnames": "^2.2.6",
     "cloudinary-react": "^1.6.6",
+    "font-picker-react": "^3.5.2",
     "html2canvas": "^1.0.0-rc.6",
     "jspdf": "^1.5.3",
     "konva": "^7.0.4",
