--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cloudinary-react": "^1.6.6",
     "font-picker-react": "^3.5.2",
     "html2canvas": "^1.0.0-rc.6",
+    "html2canvas-proxy": "^1.0.1",
     "jspdf": "^1.5.3",
     "konva": "^7.0.4",
     "node-sass": "^4.14.1",
