--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "font-picker-react": "^3.5.2",
     "html2canvas": "^1.0.0-rc.6",
     "html2canvas-proxy": "^1.0.1",
-    "jspdf": "^1.5.3",
+    "jspdf": "^2.0.0",
+    "jspdf-html2canvas": "^1.2.3",
     "konva": "^7.0.4",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
@@ -25,7 +26,6 @@
     "react-dom": "^16.13.1",
     "react-konva": "^16.13.0-5",
     "react-pdf": "^4.2.0",
-    "react-quill": "^1.3.5",
     "react-scripts": "3.4.1",
     "tesseract.js": "^2.1.1",
     "use-image": "^1.0.6"
