--- a/package.json
+++ b/package.json
@@ -13,14 +13,9 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "axios": "^0.19.2",
-    "classnames": "^2.2.6",
     "cloudinary-react": "^1.6.6",
     "font-picker-react": "^3.5.2",
     "html2canvas": "^1.0.0-rc.6",
-    "html2canvas-proxy": "^1.0.1",
-    "jspdf": "^2.0.0",
-    "jspdf-html2canvas": "^1.2.3",
     "konva": "^7.0.4",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
@@ -37,9 +32,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "storybook": "start-storybook -p 9009 -s public",
-    "build-storybook": "build-storybook -s public"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -57,11 +50,6 @@
     ]
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^5.3.19",
-    "@storybook/addon-links": "^5.3.19",
-    "@storybook/addons": "^5.3.19",
-    "@storybook/preset-create-react-app": "^3.1.4",
-    "@storybook/react": "^5.3.19",
     "express": "^4.17.1",
     "pg": "^8.3.0"
   }
